--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.6.6",
+    "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
